--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       }
       .unity-mobile #unity-canvas {
         width: 100% !important;
-        height: 100% !important;
+        height: auto !important;
+        max-height: 100vh !important;
       }
       #unity-footer {
         position: fixed; /* ทำให้ตำแหน่งไม่ขยับตามการเลื่อนหน้าจอ */
