--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         width: 100% !important;
         height: 100% !important;
       }
-      .unity-mobile #unity-canvas {
+      /*.unity-mobile #unity-canvas {
         width: 100% !important;
         height: auto !important;
         max-height: 100vh !important;
-      }
+      }*/
       #unity-footer {
         position: fixed; /* ทำให้ตำแหน่งไม่ขยับตามการเลื่อนหน้าจอ */
         bottom: 0; /* แสดงอยู่ที่ขอบล่างของหน้าจอ */
