--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       #unity-container{
         position:fixed !important; inset:0 !important;
         display:grid !important; place-items:center !important;
-         top:auto !important; transform:none !important;
+        transform:none !important;
         margin:0 !important; padding:0 !important;
       }
       #unity-canvas{
